manifests/tnkrfun-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tnkrfun
spec:
  selector:
    app: tnkrfun
  ports:
  - port: 80
    targetPort: 80
