manifests/tnkrfun-ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tnkrfun-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`tnkrfun.k3s0.apex.district11.net`)
      services:
        - name: tnkrfun
          port: 80
          scheme: http
