manifests/tnkrfun-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tnkrfun
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`tnkrfun.k3s0.apex.district11.net`)
      priority: 10
      services:
        - name: tnkrfun
          port: 80
          scheme: http
  tls:
    secretName: k3s0-wildcard-tls
